--- a/message-models/pom.xml
+++ b/message-models/pom.xml
@@ -5,19 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.jeannyil</groupId>
     <artifactId>message-models</artifactId>
-    <version>1.0.0</version>
+    <version>master-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>RHOAM Webhook Events Handler API</name>
+    <name>RHOAM Webhook Events Handler API - Message Models</name>
     <description>API that handles RHOAM Admin/Developer Portals webhook events</description>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.1_spec>1.0.2.Final</version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.1_spec>
-        <version.com.fasterxml.jackson>2.9.8</version.com.fasterxml.jackson>
+        <version.com.fasterxml.jackson>2.10.2.redhat-00003</version.com.fasterxml.jackson>
     </properties>
 
     <dependencies>
@@ -27,16 +26,19 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${version.com.fasterxml.jackson}</version>
         </dependency>
-        <!-- Specification Dependencies -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.ws.rs</groupId>
-            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
-            <version>${version.org.jboss.spec.javax.ws.jboss-jaxrs-api_2.1_spec}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <version>2.0</version>
-        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+          <id>redhat.ga</id>
+          <url>https://maven.repository.redhat.com/ga/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+    </repositories>
+
 </project>
