--- a/config/application.properties
+++ b/config/application.properties
@@ -3,10 +3,10 @@
 ## Camel
 camel.context.name=camel-quarkus-rhoam-webhook-handler-api
 
-## Configuration of the AMQP connection
+## Configuration of the Quarkus Qpid JMS extension leveraged by Camel Quarkus AMQP extension
 # Connection URL for the injected factory
-qpid-jms.url=amqps://amq-ssl-broker-amqp-0-svc-rte-amq7-broker-cluster.apps.jeannyil.sandbox1047.opentlc.com:443?transport.trustAll=true&transport.verifyHost=false&amqp.idleTimeout=120000
+quarkus.qpid-jms.url=amqps://amq-ssl-broker-amqp-0-svc-rte-amq7-broker-cluster.apps.jeannyil.sandbox1047.opentlc.com:443?transport.trustAll=true&transport.verifyHost=false&amqp.idleTimeout=120000
 # Username to set on the factory
-qpid-jms.username=amq-user
+quarkus.qpid-jms.username=amq-user
 # Password to set on the factory
-qpid-jms.password=P@ssw0rd
+quarkus.qpid-jms.password=P@ssw0rd
